2011-02-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #17374: implode() issues in Install Tool

2011-02-04  Steffen Kamper  <steffen@typo3.org>

	* Merged em revision 4071

2011-02-04  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #17351: PHP_SCRIPT_EXT/INT in 4.5 doesn't work (Thanks to Jo Hasenau)

2011-02-04  Francois Suter  <francois.suter@typo3.org>

	* Cleanup #17482: Remove all mentions of $LANG_GENERAL_LABELS
	* Fixed bug #17360: beforeWrap/afterWrap properties of TMENUITEM not working anymore (Thanks to Jo Hasenau)

2011-02-03  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17407: Pagetree cause endless loop in ExtJS events

2011-02-02  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17434: Pagetree: when start edit, the text should be selected
	* Fixed bug #17406: Pagetree Editor remains with empty value

2011-02-02  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17087: BE user password not changable via setup module with "saltedpasswords" (Thanks to Marcus Krause)
	* Fixed bug #17428: Parsetime comment is inserted BEFORE !doctype and html tag (Thanks to Georg Ringer)

2011-02-02  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #17436 typo in class.tslib_adminpanel.php (Thanks to Bjoern Pedersen)

2011-02-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17373: Standalone images in RTE-enabled field not rendered in frontend
	* Fixed bug #17349: htmlArea RTE: JS error when using "Edit element"
	* Updated htmlArea RTE version to 2.2.0
	* Fixed bug #17438: htmlArea RTE: non-xhtml markup in image dialogue

2011-02-01  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17411: DatePicker middle selector not readable
	* Fixed bug #17371: Typo in MEDIA renders wrong height

2011-01-31  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #17402: Error page should use TYPO3_copyright_year constant (Thanks to Johannes Feustel)

2011-01-28  Jeff Segars  <jeff@webempoweredchurch.org>
